--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,6 @@
     {% endblock %}
 
     {% block js %}
-
-
     {% endblock %}
 
     {% block extra_js %}
@@ -40,10 +38,14 @@
     <title>Pokemon TCG Ireland - {% block extra_title %}{% endblock %}</title>
 </head>
 
+
 <body>
     <header class="container-fluid fixed-top">
 
     </header>
+
+    <!-- Navigation -->
+
 
     <!-- Notification messages -->
     {% if messages %}
@@ -55,8 +57,13 @@
     {% block page_header %}
     {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+    <!-- Main Content-->
+    <main>{% block content %} {% endblock %}</main>
+
+    <!-- Footer section -->
+    <footer>
+
+    </footer>
 
     {% block postloadjs %}
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
@@ -70,8 +77,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-
-
     {% endblock %}
 
 
