--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,16 @@
 
     {% block css %}
     <!-- Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <!-- Project CSS stylesheet -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+    <!-- Fonts -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+
 
     {% endblock %}
 
@@ -41,6 +47,42 @@
 
 <body>
     <header class="container-fluid fixed-top">
+        <!-- Desktop header -->
+        <div class="row pt-lg-3">
+            <!-- Logo section -->
+            <div class="col-12 col-lg-4 my-auto">
+                <a href="{% url 'home' %}" class="logo-link">
+                    <div class="text-center">
+                        <h1 class="logo-text mb-0 pb-0"><strong>Pokemon TCG</strong></h1>
+                        <h2 class="logo-tag-line mt-0 pt-0">Ireland</h2>
+                    </div>
+                </a>
+            </div>
+            <!-- Search bar section -->
+            <div class=" col-12 col-lg-4 text-center my-auto">
+                <form method="GET" action="">
+                    <div class="input-group w-100">
+                        <input class="form-control border-whit rounded-0 search-input" type="text" name="q"
+                            placeholder="Search our products">
+                        <div class="input-group-append">
+                            <button class="form-control btn-yellow border-yellow rounded-0 search-button" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-magnifying-glass"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+            <!-- Account section -->
+            <div class="col-12 col-lg-4 text-center my-auto">
+
+            </div>
+        </div>
+
+        <!--  -->
+
 
     </header>
 
@@ -77,6 +119,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/69c4af19c8.js" crossorigin="anonymous"></script>
     {% endblock %}
 
 
