Add home page hero section #72

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 
     <!-- Fonts -->
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+        href="https://fonts.googleapis.com/css2?family=Carter+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
 
 
     {% endblock %}
@@ -46,7 +46,7 @@
 
 
 <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid">
         <!-- Top Navigation -->
         <div class="row pt-lg-3 d-none d-lg-flex">
             <!-- Logo section -->
@@ -140,9 +140,6 @@
 
     </div>
     {% endif %}
-
-    {% block page_header %}
-    {% endblock %}
 
     <!-- Main Content-->
     <main>{% block content %} {% endblock %}</main>
