--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse mx-4" id="navbarNav">
     <ul class="navbar-nav mx-auto">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown me-5" href="#" id="all-products-dropdown" role="button"
+            <a class="nav-link dropdown me-5 bold" href="#" id="all-products-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 All Products
             </a>
@@ -13,7 +13,7 @@
             </ul>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown me-5" href="#" id="pokemon-cards-dropdown" role="button"
+            <a class="nav-link dropdown me-5 bold" href="#" id="pokemon-cards-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Pokemon Cards
             </a>
@@ -28,7 +28,7 @@
             </ul>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown me-5" href="#" id="accessories-dropdown" role="button"
+            <a class="nav-link dropdown me-5 bold" href="#" id="accessories-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Accessories
             </a>
@@ -39,7 +39,7 @@
             </ul>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown me-5" href="#" id="collectables-dropdown" role="button"
+            <a class="nav-link dropdown me-5 bold" href="#" id="collectables-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Toys &amp; Collectables
             </a>
@@ -49,7 +49,7 @@
                 <li> <a href="" class="dropdown-item">Plushes</a> </li>
             </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown bold">
             <a class="nav-link" href="#">
                 Sale
             </a>
