--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -4,5 +4,14 @@
 {% block extra_title %}Home{% endblock %}
 
 {% block content %}
-
+<div class="container-fluid hero-section">
+    <div class="row justify-content-center">
+        <div class="col-12 hero-content text-center">
+            <h1 class="mb-3">Gotta catch 'Em all</h1>
+            <div>
+                <a href="" class="btn btn-lg py3 btn-custom">SHOP NOW</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
