--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,9 @@
 :root {
     /* Fonts */
     --heading-font: "Raleway", serif;
+    --heading-font-alt: "Carter One", serif;
     --text-font: "Roboto", serif;
+    --off-white: #f5f5f5;
 
     /* Colours */
     --blue: #075997;
@@ -18,8 +20,15 @@
     background-color: var(--blue);
 }
 /* Text formatting */
+.bold {
+    font-weight: bold;
+}
 
 /************************** GLOBAL ************************/
+/* body */
+body {
+    background-color: var(--off-white);
+}
 
 /* Headings */
 h1,
@@ -61,6 +70,21 @@ a {
     border: 0.15rem solid black;
 }
 
+/* Buttons */
+.btn-custom {
+    background-color: var(--blue);
+    color: white;
+    font-family: var(--text-font);
+    font-weight: 600;
+    border: 0.15rem solid var(--blue);
+}
+
+.btn-custom:hover {
+    color: white;
+    background-color: var(--blue);
+    filter: brightness(1.1);
+}
+
 /*************************** BASE *************************/
 
 /* Header */
@@ -70,10 +94,6 @@ header {
 }
 
 /* Logo */
-.logo-link {
-    font-style: italic;
-}
-
 .logo-link:hover {
     color: var(--yellow);
 }
@@ -102,9 +122,8 @@ header {
 /* Nav bar */
 .nav-link {
     font-family: var(--text-font);
+    font-size: 1.1rem;
     color: white;
-    border-radius: 1rem;
-    background-color: transparent;
 }
 
 .nav-link:hover {
@@ -136,11 +155,36 @@ header {
     border-left-width: 0;
 }
 
+/*************************** HOME *************************/
+/* Hero Section */
+.hero-section {
+    background: url("/media/hero-image.png") no-repeat center center;
+    background-size: cover;
+    height: 100%;
+    filter: brightness(1.1);
+}
+
+.hero-content {
+    margin: 17rem 0 1rem 0;
+}
+
+.hero-content h1 {
+    font-family: var(--heading-font-alt);
+    font-size: 2.4rem;
+    font-weight: 100;
+    text-transform: uppercase;
+    color: var(--blue);
+}
+
 /*********************** MEDIA QUERIES *********************/
 /* 575px sm */
 @media screen and (max-width: 35.938em) {
     /* BASE */
     .mobile-logo {
         display: none;
+    }
+    /* HOME */
+    .hero-content h1 {
+        font-size: 1.9rem;
     }
 }
