Add card set & expansion models & all fixtures #38

--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -19,10 +19,9 @@
             </a>
             <ul class=" dropdown-menu border-0" aria-label="pokemon-cards-dropdown">
                 <li> <a href="" class="dropdown-item">Booster Packs</a> </li>
-                <li> <a href="" class="dropdown-item">Blister Packs</a> </li>
-                <li> <a href="" class="dropdown-item">Booster Box</a> </li>
-                <li> <a href="" class="dropdown-item">Booster Cases</a> </li>
-                <li> <a href="" class="dropdown-item">Collection Box</a> </li>
+                <li> <a href="" class="dropdown-item">Booster Bundle</a> </li>
+                <li> <a href="" class="dropdown-item">Booster Boxes</a> </li>
+                <li> <a href="" class="dropdown-item">Boxed Sets</a> </li>
                 <li> <a href="" class="dropdown-item">Elite Trainer Boxes</a> </li>
                 <li> <a href="" class="dropdown-item">Tins</a> </li>
             </ul>
