--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -9,6 +9,8 @@
                 <li> <a href="" class="dropdown-item">By Price</a> </li>
                 <li> <a href="" class="dropdown-item">By Rating</a> </li>
                 <li> <a href="" class="dropdown-item">By Category</a> </li>
+                <li> <a href="" class="dropdown-item">By Card Set</a> </li>
+                <li> <a href="" class="dropdown-item">By Expansion</a> </li>
                 <li> <a href="{% url 'products' %}" class="dropdown-item">All Products</a> </li>
             </ul>
         </li>
