--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,6 +15,19 @@
 .text-white {
     color: white;
 }
+
+.text-blue {
+    color: var(--blue) !important;
+}
+
+.text-yellow {
+    color: var(--yellow);
+}
+
+.text-gray {
+    color: gray;
+}
+
 /* Background colours */
 .bg-blue {
     background-color: var(--blue);
@@ -176,6 +189,10 @@ header {
     color: var(--blue);
 }
 
+/************************* PRODUCTS ***********************/
+.product-rating {
+    text-align: right;
+}
 /*********************** MEDIA QUERIES *********************/
 /* 575px sm */
 @media screen and (max-width: 35.938em) {
