Create product detail template and view #33

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -9,7 +9,7 @@
         <div class="col-12 hero-content text-center">
             <h1 class="mb-3">Gotta catch 'Em all</h1>
             <div>
-                <a href="" class="btn btn-lg py3 btn-custom">SHOP NOW</a>
+                <a href="{% url 'products' %}" class="btn btn-lg py3 btn-custom">SHOP NOW</a>
             </div>
         </div>
     </div>
