--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -21,17 +21,17 @@
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
                     <div class="card h-100 shadow">
                         {% if product.image %}
-                        <a href="">
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
                         {% else %}
-                        <a href="">
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top img-fluid" src="{% static 'images/no-image-placeholder.webp' %}"
                                 alt=" {{ product.name }}">
                         </a>
                         {% endif %}
                         <div class="card-body py-0">
-                            <p class="mb-2 font-weight-bold"><strong>{{ product.name }}</strong></p>
+                            <p class="mb-2"><strong>{{ product.name }}</strong></p>
                         </div>
                         <div class="card-footer bg-white pt-0 border-0 text-left">
                             <div class="row">
