Update product view to handle searches #46

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
             </div>
             <!-- Search bar section -->
             <div class=" col-12 col-lg-4 text-center my-auto">
-                <form method="GET" action="">
+                <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <input class="form-control rounded-0 search-input" type="text" name="q"
                             placeholder="Search our products">
