--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             <div class="col-12 col-lg-4 my-auto d-flex justify-content-start">
                 <a href="{% url 'home' %}" class="logo-link ms-2">
                     <div class="text-center">
-                        <h1 class="logo-text mb-0 pb-0"><strong>Pokemon TCG</strong></h1>
+                        <h1 class="logo-text mb-0 pb-0"><strong>Pokémon TCG</strong></h1>
                         <h2 class="logo-tag-line mt-0 pt-0">Ireland</h2>
                     </div>
                 </a>
