--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -6,18 +6,17 @@
                 All Products
             </a>
             <ul class=" dropdown-menu border-0" aria-label="all-products-dropdown">
-                <li> <a href="" class="dropdown-item">By Price</a> </li>
-                <li> <a href="" class="dropdown-item">By Rating</a> </li>
-                <li> <a href="" class="dropdown-item">By Category</a> </li>
-                <li> <a href="" class="dropdown-item">By Card Set</a> </li>
-                <li> <a href="" class="dropdown-item">By Expansion</a> </li>
+                <li> <a href="{% url 'products'%}?sort=price&direction=asc" class="dropdown-item">By Price</a> </li>
+                <li> <a href="{% url 'products'%}?sort=rating&direction=dec" class="dropdown-item">By Rating</a> </li>
+                <li> <a href="{% url 'products'%}?sort=category&direction=asc" class="dropdown-item">By Category</a>
+                </li>
                 <li> <a href="{% url 'products' %}" class="dropdown-item">All Products</a> </li>
             </ul>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown me-5 bold" href="#" id="pokemon-cards-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                Pokemon Cards
+                Pokémon Cards
             </a>
             <ul class=" dropdown-menu border-0" aria-label="pokemon-cards-dropdown">
                 <li> <a href="{% url 'products'%}?category=booster_packs" class="dropdown-item">Booster Packs</a> </li>
