--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -14,8 +14,52 @@
     <div class="row">
         <div class="product-container col-12">
             <div class="row mt-1 mb-2">
-
+                <!-- Product count -->
+                <div class="col-12 col-md-6 my-auto d-flex justify-content-center justify-content-md-start">
+                    <p class="text-muted mt-3 text-center text-md-left">
+                        {% if search_term or current_categories or current_sorting != 'None_None' or on_sale == 1 %}
+                        <span class="fs-6"><a href="{% url 'products' %}"><strong class="text-blue feedback">Products Home</strong></a> | </span>
+                        {% endif %}
+                        {{ products|length }} Products
+                        {% if search_term %} found for <strong> "{{ search_term }}"</strong>{% endif %}
+                    </p>
+                </div>
+                <!-- Sort selector -->
+                <div class="col-12 col-md-6 my-auto d-flex justify-content-center justify-content-md-end">
+                    <div class="select_container w-50">
+                        <select class="form-select form-select-sm rounded-2" aria-label="sort selector">
+                            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>
+                                Sort by...
+                            </option>
+                            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>
+                                Price (low to high)
+                            </option>
+                            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>
+                                Price (high to low)
+                            </option>
+                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
+                                Rating (low to high)
+                            </option>
+                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
+                                Rating (high to low)
+                            </option>
+                            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>
+                                Name (A-Z)
+                            </option>
+                            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>
+                                Name (Z-A)
+                            </option>
+                            <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                                Category (A-Z)
+                            </option>
+                            <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>
+                                Category (Z-A)
+                            </option>
+                        </select>
+                    </div>
+                </div>
             </div>
+            <!-- Display products -->
             <div class="row">
                 {% for product in products %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
