--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -7,7 +7,7 @@
             </a>
             <ul class=" dropdown-menu border-0" aria-label="all-products-dropdown">
                 <li> <a href="{% url 'products'%}?sort=price&direction=asc" class="dropdown-item">By Price</a> </li>
-                <li> <a href="{% url 'products'%}?sort=rating&direction=dec" class="dropdown-item">By Rating</a> </li>
+                <li> <a href="{% url 'products'%}?sort=rating&direction=desc" class="dropdown-item">By Rating</a> </li>
                 <li> <a href="{% url 'products'%}?sort=category&direction=asc" class="dropdown-item">By Category</a>
                 </li>
                 <li> <a href="{% url 'products' %}" class="dropdown-item">All Products</a> </li>
