--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -27,7 +27,7 @@
                 <!-- Sort selector -->
                 <div class="col-12 col-md-6 my-auto d-flex justify-content-center justify-content-md-end">
                     <div class="select_container w-50">
-                        <select class="form-select form-select-sm rounded-2" aria-label="sort selector">
+                        <select id="sort-selector" class="form-select form-select-sm rounded-2" aria-label="sort selector">
                             <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>
                                 Sort by...
                             </option>
@@ -138,4 +138,42 @@
         </div>
     </div>
 </div>
+<div class="btt-button shadow-sm rounded-3 border-blue feedback">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-yellow mx-auto my-auto"></i>
+    </a>	
+  </div>
+{% endblock %}
+
+<!-- From boutique_ado walkthrough -->
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
