--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -62,7 +62,7 @@
             <!-- Display products -->
             <div class="row">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4 selectable-feedback">
                     <div class="card h-100 shadow">
                         {% if product.image %}
                         <a href="{% url 'product_detail' product.id %}">
@@ -105,7 +105,6 @@
                                             </span>
                                         </a>
                                     </p>
-
                                     {% endif %}
 
                                     {% if product.expansion %}
