--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -107,6 +107,15 @@ a {
     filter: brightness(1.1);
 }
 
+.selectable-feedback {
+    transition: transform 0.3s ease;
+}
+
+.selectable-feedback:hover {
+    transform: scale(1.01);
+    filter: brightness(1.05);
+}
+
 .feedback:hover {
     filter: brightness(1.2);
 }
