--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -62,76 +62,7 @@
             <!-- Display products -->
             <div class="row">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4 selectable-feedback">
-                    <div class="card h-100 shadow">
-                        {% if product.image %}
-                        <a href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
-                        {% else %}
-                        <a href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{% static 'images/no-image-placeholder.webp' %}"
-                                alt=" {{ product.name }}">
-                        </a>
-                        {% endif %}
-                        <div class="card-body py-0">
-                            <p class="mb-2"><strong>{{ product.name }}</strong></p>
-                        </div>
-                        <div class="card-footer bg-white pt-0 border-0 text-left">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="mb-3 fs-3 text-center text-blue"><strong>€{{ product.price }}</strong></p>
-
-                                    <!-- add links for category, card set and expansion -->
-                                    {% if product.category %}
-                                    <p class="mb-1 product_tag">
-                                        <a href="{% url 'products' %}?category={{product.category.name}}"
-                                            class="feedback">
-                                            <i class="fa-solid fa-tag me-2 text-blue"></i>
-                                            <span class="text-gray">
-                                                {{ product.category.display_name }}
-                                            </span>
-                                        </a>
-                                    </p>
-                                    {% endif %}
-
-                                    {% if product.card_set %}
-                                    <p class="mb-1">
-                                        <a href=" {% url 'products' %}?card_set={{product.card_set.name}}"
-                                            class="feedback">
-                                            <i class="fa-solid fa-layer-group me-2 text-blue"></i>
-                                            <span class="text-gray">
-                                                {{product.card_set.display_name }}
-                                            </span>
-                                        </a>
-                                    </p>
-                                    {% endif %}
-
-                                    {% if product.expansion %}
-                                    <p>
-                                        <a href=" {% url 'products' %}?expansion={{product.expansion.name}}"
-                                            class="feedback">
-                                            <i class="fa-solid fa-dragon me-2 text-blue">
-                                            </i><span class="text-gray">
-                                                {{product.expansion.display_name}}
-                                            </span>
-                                        </a>
-                                    </p>
-                                    {% endif %}
-
-                                    <div class="product-rating">
-                                        {% if product.rating %}
-                                        <small><i class="fas fa-star me-1 fs-6 text-yellow"></i><span class="text-gray">
-                                                {{ product.rating }} / 5 </span></small>
-                                        {% else %}
-                                        <small>No Rating</small>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include 'includes/product_card.html' %}
                 {% endfor %}
             </div>
         </div>
