--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <!-- Hero section -->
-<div class="container-fluid hero-section">
+<div class="container-fluid hero-section mt-2">
     <div class="row justify-content-center">
         <div class="col-12 hero-content text-center">
             <h1 class="mb-3">Gotta catch 'Em all</h1>
@@ -16,7 +16,7 @@
     </div>
 </div>
 <!-- New products -->
-<div class="container mt-5 bg-white rounded-4 px-4 py-4 border border-blue feature-products">
+<div class="container mt-5 bg-white rounded-4 px-4 py-4 feature-products">
     <section>
         <h2 class="text-blue bold text-center">Latest Products</h2>
         <p class="d-none d-md-block text-center"><small class="text-muted">Check out our latest offerings</small></p>
@@ -29,7 +29,7 @@
 </div>
 
 <!-- Popular products -->
-<div class="container mt-5 bg-white rounded-4 px-4 py-4 border border-blue mb-3 feature-products">
+<div class="container mt-5 bg-white rounded-4 px-4 py-4 mb-3 feature-products">
     <section>
         <h2 class="text-blue bold text-center">Popular Products</h2>
         <p class="d-none d-md-block text-center"><small class="text-muted">Check out our most highly rated products</small></p>
