Add cart structure, update hero images #50

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
                         </ul>
                     </li>
                     <li class="list-inline-item ms-3">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{% url 'cart_view' %}">
                             <div class="text-center ms-2">
                                 <div><i class="fas fa-cart-shopping fa-lg"></i></div>
                                 <p class="my-0">
