--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -32,7 +32,7 @@
     </li>
     <!-- Cart icon -->
     <li class="list-inline-item ms-3">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'cart_view' %}">
             <div class="text-center">
                 <div><i class="fas fa-cart-shopping fa-lg"></i></div>
                 <p class="my-0">
