--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -33,7 +33,7 @@
     <!-- Cart icon -->
     <li class="list-inline-item ms-3">
         <a class="nav-link" href="{% url 'cart_view' %}">
-            <div>
+            <div class="text-center">
                 <i class="fas fa-cart-shopping fa-lg position-relative">
                     {% if product_count > 0 %}
                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.5rem">
