--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -30,22 +30,23 @@
             {% endif %}
         </ul>
     </li>
-    <!-- Cart icon -->
+    <!-- Basket icon -->
     <li class="list-inline-item ms-3">
-        <a class="nav-link" href="{% url 'cart_view' %}">
+        <a class="nav-link" href="{% url 'basket_view' %}">
             <div class="text-center">
-                <i class="fas fa-cart-shopping fa-lg position-relative">
+                <i class="fas fa-cart-shopping cart-icon position-relative">
                     {% if product_count > 0 %}
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.5rem">
-                            {{ product_count }}
-                        </span>
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                        style="font-size: 0.5rem">
+                        {{ product_count }}
+                    </span>
                     {% endif %}
                 </i>
                 <p class="my-0">
                     {% if items_total %}
-                        € {{items_total|floatformat:2}}
+                    € {{items_total|floatformat:2}}
                     {% else %}
-                        €0.00
+                    €0.00
                     {% endif %}
                 </p>
             </div>
