--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -10,7 +10,7 @@
         <div class="col-12 hero-content text-center">
             <h1 class="mb-3">Gotta catch 'Em all</h1>
             <div>
-                <a href="{% url 'products' %}" class="btn btn-lg py3 btn-custom">SHOP NOW</a>
+                <a href="{% url 'products' %}" class="btn btn-lg py3 btn-custom-blue shadow">SHOP NOW</a>
             </div>
         </div>
     </div>
@@ -32,7 +32,8 @@
 <div class="container mt-5 bg-white rounded-4 px-4 py-4 mb-3 feature-products">
     <section>
         <h2 class="text-blue bold text-center">Popular Products</h2>
-        <p class="d-none d-md-block text-center"><small class="text-muted">Check out our most highly rated products</small></p>
+        <p class="d-none d-md-block text-center"><small class="text-muted">Check out our most highly rated
+                products</small></p>
         <div class="row mt-3 d-flex justify-content-center">
             {% for product in popular_products %}
             {% include 'includes/product_card.html' %}
