--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -67,26 +67,27 @@
                     <small>No Rating</small>
                     {% endif %}
                 </div>
-                <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12 d-flex align-items-center justify-content-center">
                             <p class="mt-3"><strong class="me-2">Quantity</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 d-flex justify-content-center">
-                            <input type="submit" class="btn btn-custom w-75 mt-3" value="Add to cart">
+                            <input type="submit" class="btn btn-custom-yellow w-75 mt-3 shadow" value="Add to basket">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
                 <div class="mt-5 mb-3 text-blue feedback">
                     <a href="{% url 'products' %}">
-                            <i class="fas fa-arrow-left me-1"></i>Back to products
+                        <i class="fas fa-arrow-left me-1"></i>Back to products
                     </a>
                 </div>
             </div>
